--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
