--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn  src/server.ts"
   },
   "license": "MIT",
@@ -11,7 +12,11 @@
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "multer": "^1.4.4",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "tsyringe": "^4.7.0",
+    "typeorm": "0.2.45",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
