--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "bcrypt": "^5.1.0",
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -20,7 +22,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
