--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn  src/server.ts"
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn  src/shared/infra/http/server.ts",
+    "test": "jest"
   },
   "license": "MIT",
   "dependencies": {
@@ -12,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.8.0",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
@@ -36,8 +39,11 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.3.1",
     "prettier": "^2.5.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^4.1.1",
     "typescript": "^4.5.5"
   }
 }
