--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn  src/shared/infra/http/server.ts",
-    "test": "jest",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "license": "MIT",
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.8.0",
+    "supertest": "^6.3.3",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.7.0",
@@ -30,6 +31,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
