--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "dayjs": "^1.11.7",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
-    "supertest": "^6.3.3",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.7.0",
     "typeorm": "0.2.45",
