--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1286.0",
     "bcrypt": "^5.1.0",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
@@ -33,6 +36,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mime": "^3.0.1",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
