SES mail provider, profile image url

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@ FORGOT_MAIL_URL=
 AWS_SECRET_ACCESS_KEY=
 AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET=
+AWS_BUCKET_URL=
 AWS_REGION=
 
+APP_API_URL=
+
+APP_API_EMAIL=
+
 DISK_TYPE=
+MAIL_PROVIDER=
