--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 FORGOT_MAIL_URL=http://localhost:3333/password/reset?token=
 DISK_TYPE=local
+
+APP_API_URL=http://localhost:3333
+MAIL_PROVIDER=ses
