--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1286.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
