--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           port: $${{ secrets.SSH_PORT }}
-          key: ${{ sects.SSH_KEY }}
+          key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
           target: "~/app/api-rentx"
   
