--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,19 +13,25 @@ services:
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
-  app:
-    build: .
-    container_name: rentx
-    links: 
-      - database_ignite
-    depends_on:
-      - database_ignite
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   links: 
+  #     - database_ignite
+  #   depends_on:
+  #     - database_ignite
 
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+    
+  redis:
+    image: redis:alpine
+    container_name: redis
+    restart: always
     ports:
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-
+      - 6379:6379
 volumes:
   pgdata: 
     driver: local
