--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^7.29.0",
+    "@sentry/tracing": "^7.29.0",
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1286.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
@@ -27,6 +30,8 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
+    "rate-limiter-flexible": "^2.4.1",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "swagger-ui-express": "^4.3.0",
@@ -43,10 +48,12 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mime": "^3.0.1",
+    "@types/redis": "2.8.32",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
